--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,18 @@ node_modules
 phrase.json
 package-lock
 access_token
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
